--- a/presentes.html
+++ b/presentes.html
@@ -6,7 +6,7 @@
 <title>Lista de Presentes — Guilherme & Marcella</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<style>
+<style>  
 body{ font-family:'Montserrat',sans-serif; margin:0; background:#fff; }
 header{ position:fixed; top:0; left:0; right:0; background:#fff; padding:16px 0; text-align:center; z-index:20; border-bottom:1px solid #eee; }
 header a{ margin:0 14px; text-decoration:none; color:#000; font-weight:300; }
@@ -81,5 +81,8 @@ document.getElementById('filtroCategoria').onchange = render;
 document.getElementById('ordenar').onchange = render;
 render();
 </script>
+  <script src="qrcode.min.js"></script> <!-- já tinha -->
+<script src="presentes.js"></script>
+
 </body>
 </html>
