--- a/presentes.html
+++ b/presentes.html
@@ -1,87 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lista de Presentes — Guilherme & Marcella</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-<style>  
-body{ font-family:'Montserrat',sans-serif; margin:0; background:#fff; }
-header{ position:fixed; top:0; left:0; right:0; background:#fff; padding:16px 0; text-align:center; z-index:20; border-bottom:1px solid #eee; }
-header a{ margin:0 14px; text-decoration:none; color:#000; font-weight:300; }
-main{ padding-top:90px; max-width:1200px; margin:0 auto; }
-.controls{ display:flex; gap:14px; flex-wrap:wrap; margin-bottom:20px; }
-select{ padding:10px; border-radius:8px; border:1px solid #ccc; }
-.grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:20px; }
-.card{ border:1px solid #eee; border-radius:12px; padding:10px; background:#fff; box-shadow:0 2px 8px rgba(0,0,0,0.05); }
-.card img{ width:100%; border-radius:10px; }
-.card h4{ margin:8px 0 4px; font-weight:400; }
-.card p{ margin:0 0 6px; font-weight:300; font-size:14px; }
-</style>
+<link rel="stylesheet" href="presentes.css">
+
+<!-- QR Code lib -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
 </head>
 <body>
-<header>
-  <a href="index.html#rsvp">RSVP</a>
-  <a href="index.html#casal">O Casal</a>
-  <a href="index.html#cerimonia">Cerimônia</a>
-  <a href="presentes.html">Presentes</a>
-</header>
-<main>
-  <h2>Lista de Presentes</h2>
-  <div class="controls">
-    <select id="filtroCategoria">
-      <option value="">Todas categorias</option>
-      <option>Cozinha</option>
-      <option>Sala</option>
-      <option>Quarto</option>
-      <option>Banheiro</option>
-      <option>Lavanderia</option>
-      <option>Escritório</option>
-      <option>Decoração</option>
-      <option>Eletrônicos</option>
-      <option>Pets</option>
-      <option>Lua de Mel</option>
-    </select>
-    <select id="ordenar">
-      <option value="">Ordenar</option>
-      <option value="preco-asc">Preço: menor → maior</option>
-      <option value="preco-desc">Preço: maior → menor</option>
-      <option value="nome-asc">Nome A-Z</option>
-      <option value="nome-desc">Nome Z-A</option>
-    </select>
+
+<header class="topo">
+  <div class="container">
+    <h1>Lista de Presentes</h1>
+    <a href="index.html" class="voltar">← Voltar</a>
   </div>
+</header>
+
+<section class="container">
+
+  <!-- Controles -->
+  <div class="controls">
+    <div class="control-item">
+      <label>Categoria</label>
+      <select id="filtroCategoria">
+        <option value="">Todas</option>
+      </select>
+    </div>
+
+    <div class="control-item">
+      <label>Ordenar por</label>
+      <select id="ordenar">
+        <option value="">Padrão</option>
+        <option value="preco_asc">Preço ↑</option>
+        <option value="preco_desc">Preço ↓</option>
+        <option value="nome_asc">Nome A–Z</option>
+        <option value="nome_desc">Nome Z–A</option>
+      </select>
+    </div>
+
+    <div class="control-item">
+      <label>Exibição</label>
+      <button id="toggleView" class="toggle">Grid</button>
+    </div>
+  </div>
+
+  <!-- Lista -->
   <div id="lista" class="grid"></div>
-</main>
-<script src="presentes.js"></script>
-<script>
-function render(){
-  let lista = [...presentes];
-  const cat = document.getElementById('filtroCategoria').value;
-  const ord = document.getElementById('ordenar').value;
 
-  if(cat) lista = lista.filter(x=> x.categoria === cat);
+</section>
 
-  if(ord === 'preco-asc') lista.sort((a,b)=> a.preco - b.preco);
-  if(ord === 'preco-desc') lista.sort((a,b)=> b.preco - a.preco);
-  if(ord === 'nome-asc') lista.sort((a,b)=> a.nome.localeCompare(b.nome));
-  if(ord === 'nome-desc') lista.sort((a,b)=> b.nome.localeCompare(a.nome));
 
-  const el = document.getElementById('lista');
-  el.innerHTML = lista.map(p=>`
-    <div class='card'>
-      <img src='${p.img}' alt='${p.nome}'>
-      <h4>${p.nome}</h4>
-      <p>R$ ${p.preco.toFixed(2)}</p>
-      <p>${p.categoria}</p>
-    </div>`).join('');
-}
+<!-- Modal Presentear -->
+<div class="modal-bg" id="modalPresente">
+  <div class="modal">
+    <button class="fechar" onclick="fecharModalPresente()">✕</button>
 
-document.getElementById('filtroCategoria').onchange = render;
-document.getElementById('ordenar').onchange = render;
-render();
-</script>
-  <script src="qrcode.min.js"></script> <!-- já tinha -->
+    <h2 id="modalTitulo"></h2>
+    <img id="modalImg" class="modal-img" alt="Presente">
+
+    <p id="modalDescricao"></p>
+    <p><strong>Preço:</strong> R$ <span id="modalPreco"></span></p>
+
+    <h3>Contribuir com este presente</h3>
+
+    <div class="modal-info">
+      <p><strong>PIX:</strong></p>
+      <div id="qr"></div>
+      <p class="pix-chave" id="pixChave"></p>
+    </div>
+
+    <button class="btn" onclick="confirmarPresente()">Confirmar compra</button>
+  </div>
+</div>
+
+
 <script src="presentes.js"></script>
 
 </body>
