--- a/presentes.html
+++ b/presentes.html
@@ -16,7 +16,7 @@
   <header class="topo" role="banner">
     <div class="container">
       <!-- usei o caminho local que você enviou; ambiente transformará em URL -->
-      <a class="voltar" href="/mnt/data/index.html" aria-label="Voltar para a página inicial">← Voltar</a>
+      <a class="voltar" href="Guilherme_Marcella" aria-label="Voltar para a página inicial">← Voltar</a>
       <h1>Lista de Presentes</h1>
       <div style="width:72px" aria-hidden="true"></div>
     </div>
