--- a/presentes.html
+++ b/presentes.html
@@ -1,90 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Presentes — Guilherme & Marcella</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Presentes — Guilherme & Marcella</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="presentes.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="presentes.css">
 
-  <!-- QR Code lib -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+<!-- QR Code lib -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
 
-  <header class="topo" role="banner">
-    <div class="container">
-      <!-- usei o caminho local que você enviou; ambiente transformará em URL -->
-      <a class="voltar" href="index.html" aria-label="Voltar para a página inicial">← Voltar</a>
-      <h1>Lista de Presentes</h1>
-      <div style="width:72px" aria-hidden="true"></div>
+<header class="topo">
+  <div class="container">
+    <a class="voltar" href="index.html">← Voltar</a>
+    <h1>Lista de Presentes</h1>
+    <div style="width:72px"></div><!-- espaço para equilibrar layout -->
+  </div>
+</header>
+
+<section class="container">
+  <div class="controls">
+    <div class="control-item">
+      <label for="filtroCategoria">Categoria</label>
+      <select id="filtroCategoria"></select>
     </div>
-  </header>
 
-  <main class="container" role="main">
-    <section class="controls" aria-label="Controles de filtro e exibição">
-      <div class="control-item">
-        <label for="filtroCategoria">Categoria</label>
-        <select id="filtroCategoria" aria-controls="lista"></select>
-      </div>
+    <div class="control-item">
+      <label for="ordenar">Ordenar por</label>
+      <select id="ordenar">
+        <option value="">Padrão</option>
+        <option value="preco_asc">Preço ↑</option>
+        <option value="preco_desc">Preço ↓</option>
+        <option value="nome_asc">Nome A–Z</option>
+        <option value="nome_desc">Nome Z–A</option>
+      </select>
+    </div>
 
-      <div class="control-item">
-        <label for="ordenar">Ordenar por</label>
-        <select id="ordenar" aria-controls="lista">
-          <option value="">Padrão</option>
-          <option value="preco_asc">Preço ↑</option>
-          <option value="preco_desc">Preço ↓</option>
-          <option value="nome_asc">Nome A–Z</option>
-          <option value="nome_desc">Nome Z–A</option>
-        </select>
-      </div>
-
-      <div class="control-item">
-        <label for="viewToggle">Exibição</label>
-        <select id="viewToggle" aria-controls="lista">
-          <option value="grid">Grid</option>
-          <option value="lista">Lista (texto)</option>
-        </select>
-      </div>
-    </section>
-
-    <section id="lista" class="grid" aria-live="polite" aria-label="Lista de presentes">
-      <!-- conteúdo injetado por presentes.js -->
-    </section>
-  </main>
-
-  <!-- Modal (será reutilizado pelo presentes.js) -->
-  <div id="modalPresenteBg" class="modal-bg hidden" role="dialog" aria-modal="true" aria-labelledby="modalTitulo">
-    <div class="modal" id="modalPresenteContent" style="max-height:85vh; overflow:auto;"></div>
+    <div class="control-item">
+      <label for="viewToggle">Exibição</label>
+      <select id="viewToggle">
+        <option value="grid">Grid</option>
+        <option value="lista">Lista (texto)</option>
+      </select>
+    </div>
   </div>
 
-  <!-- presentes.js (tem que existir no mesmo diretório) -->
-  <script src="presentes.js"></script>
+  <div id="lista" class="grid"></div>
+</section>
 
-  <!-- validação BR Code (opcional, para debug) -->
-  <script>
-    function validateBRCode(br){
-      if(!br || typeof br !== 'string') return { valid:false, error:'BR code vazio' };
-      const without = br.slice(0,-4);
-      const crcGiven = br.slice(-4).toUpperCase();
-      function crc16(input){
-        let crc = 0xFFFF;
-        for(let i=0;i<input.length;i++){
-          crc ^= input.charCodeAt(i) << 8;
-          for(let j=0;j<8;j++){
-            if(crc & 0x8000) crc = ((crc << 1) ^ 0x1021) & 0xFFFF;
-            else crc = (crc << 1) & 0xFFFF;
-          }
+<!-- Modal template (injetado por JS se necessário) -->
+<div id="modalPresenteBg" class="modal-bg" style="display:none;">
+  <div class="modal" id="modalPresenteContent" style="max-height:85vh; overflow:auto;"></div>
+</div>
+
+<!-- seu presentes.js (cole o presentes.js corrigido que você já recebeu) -->
+<script src="presentes.js"></script>
+
+<!-- VALIDADOR RÁPIDO — para testar BR Code no console (também útil para debug) -->
+<script>
+  // função disponível globalmente: validateBRCode(brcode) -> retorna {valid:Boolean, crcExpected, crcFound}
+  function validateBRCode(br){
+    if(!br || typeof br !== 'string') return { valid:false, error:'BR code vazio' };
+    // extrai os últimos 4 caracteres (CRC) e testa
+    const without = br.slice(0, -4);
+    const crcGiven = br.slice(-4).toUpperCase();
+
+    function crc16(input){
+      let crc = 0xFFFF;
+      for(let i=0;i<input.length;i++){
+        crc ^= input.charCodeAt(i) << 8;
+        for(let j=0;j<8;j++){
+          if(crc & 0x8000) crc = ((crc << 1) ^ 0x1021) & 0xFFFF;
+          else crc = (crc << 1) & 0xFFFF;
         }
-        return crc.toString(16).toUpperCase().padStart(4,'0');
       }
-      const expected = crc16(without + '6304');
-      const expected_alt = crc16(without);
-      return { valid: crcGiven === expected || crcGiven === expected_alt, crcFound:crcGiven, expected, expected_alt };
+      return crc.toString(16).toUpperCase().padStart(4,'0');
     }
-    window.validateBRCode = validateBRCode;
-  </script>
+
+    const expected = crc16(without + '6304'); // alguns BR codes já incluem 6304 — se não, função usada antes usava '...6304'
+    // fallback calculo direto sem adicionar 6304 somente se mismatch
+    const expected_alt = crc16(without);
+
+    return {
+      valid: crcGiven === expected || crcGiven === expected_alt,
+      crcFound: crcGiven,
+      crcExpected: expected,
+      crcExpectedAlt: expected_alt
+    };
+  }
+
+  // expose for debugging
+  window.validateBRCode = validateBRCode;
+</script>
 
 </body>
 </html>
