--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <form id="rsvpForm" style="margin-top:12px;">
       <input type="text" id="nomeResponsavel" placeholder="Seu nome (responsável pela confirmação)" required>
       <input type="text" id="telefone" placeholder="Telefone (WhatsApp preferencial)" required>
-      <textarea id="nomes" placeholder="Nomes dos acompanhantes (1 por linha)" rows="4" required></textarea>
+      <textarea id="nomes" placeholder="Nomes dos acompanhantes (1 por linha)" rows="4"></textarea>
       <select id="presenca" required>
         <option value="">Vocês irão?</option>
         <option value="sim">Sim — iremos</option>
